--- a/spot/templates/spot/view.html
+++ b/spot/templates/spot/view.html
@@ -8,7 +8,13 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
-    <title>Railway Ticket Enquiry!</title>
+    <title>
+            {{json_object.train.name}}
+        {% if json_object.response_code != 200 %}
+            Invalid!!!!
+        {% endif %}
+
+    </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -40,10 +46,60 @@
     </ul>
   </div>
 </nav>
+    <br><br>
+
+{% if json_object.response_code == 200%}
+    <center>
+    <table class="table" style="width: 80%">
+  <thead class="thead-dark">
+    <tr>
+      <th scope="col">Station</th>
+      <th scope="col">Distance</th>
+        <th scope="col">Scheduled Arrival</th>
+        <th scope="col">Actual Arrival</th>
+        <th scope="col">Scheduled Departure</th>
+        <th scope="col">Actual Departure</th>
+        <th scope="col">Train Status</th>
+
+    </tr>
+  </thead>
+  <tbody>
+  {%  for i in json_object.route %}
+    <tr>
+      <td>{{ i.station.name }}</td>
+      <td>{{ i.distance }}</td>
+      <td>{{ i.scharr  }}</td>
+      <td>{{ i.actarr }}</td>
+      <td>{{ i.schdep }}</td>
+       <td>{{ i.actdep }}</td>
+        <td>
+            {% if i.has_departed == 0 %}
+                Not
+            {% endif %}
+                Departed/
+
+            {% if i.latemin > 0 %}
+                <button type="button" class="btn btn-outline-danger btn-sm">{{ i.latemin }} minutes</button></td>
+
+            {% endif %}
+            {% if i.latemin <= 0 %}
+                <button type="button" class="btn btn-outline-success btn-sm">{{ i.latemin }} minutes</button></td>
+
+            {% endif %}
+
+    </tr>
+  {% endfor %}
+  </tbody>
+</table>
 
 
 
 
+</center>
+
+
+
+{% endif %}
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
